persist current browser text on closing
persist the currently shown text on closing the EMFModelHelpView
some minor code refactorings

--- a/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.properties
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.properties
@@ -4,3 +4,4 @@ providerName = AG Tele
 _UI_LabelReferenceNameSeparator = \u0020\u00bb\u0020
 _UI_EMFModelHelpView_Name = EMF Model Help
 _UI_ViewCategory_Name = AG Tele
+_UI_EMFModelHelpView_TooManyElementsSelected = Please Select only 1 Element
