Create a handler that allows to open the GenModel for an Ecore model
Additionally, the element selected in the Ecore model is also revealed
and selected in the GenModel.

--- a/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
@@ -49,4 +49,42 @@
          <contentTypeBinding contentTypeId="org.eclipse.emf.ecore.xmi"/>
       </editor>
    </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:de.tud.et.ifa.agtele.ui.editors.EcoreEditorID">
+         <command
+               commandId="de.tud.et.ifa.agtele.ui.commands.OpenGenModel"
+               label="Open GenModel"
+               style="push"
+               tooltip="Jumps to the corresponding element in the GenModel associated with this Ecore model">
+            <visibleWhen
+                  checkEnabled="false">
+               <with
+                     variable="activeMenuSelection">
+                  <and>
+                     <count
+                           value="1">
+                     </count>
+                     <iterate
+                           ifEmpty="false">
+                        <instanceof
+                              value="org.eclipse.emf.ecore.EObject">
+                        </instanceof>
+                     </iterate>
+                  </and>
+               </with>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            defaultHandler="de.tud.et.ifa.agtele.ui.handlers.OpenGenModelHandler"
+            id="de.tud.et.ifa.agtele.ui.commands.OpenGenModel"
+            name="OpenGenModel">
+      </command>
+   </extension>
 </plugin>
