Control the creation of the OpenCode/GenModel handlers via a custom menu

--- a/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
@@ -53,193 +53,18 @@
          point="org.eclipse.ui.menus">
       <menuContribution
             allPopups="false"
+            class="de.tud.et.ifa.agtele.ui.contributions.EcoreEditorMenuContribution"
             locationURI="popup:de.tud.et.ifa.agtele.ui.editors.EcoreEditorID">
-         <command
-               commandId="de.tud.et.ifa.agtele.ui.commands.OpenGenModel"
-               icon="icons/GenModelModelFile.gif"
-               label="Open GenModel"
-               style="push"
-               tooltip="Jumps to the corresponding element in the GenModel associated with this Ecore model">
-            <visibleWhen
-                  checkEnabled="true">
-            </visibleWhen>
-         </command>
       </menuContribution>
       <menuContribution
             allPopups="false"
+            class="de.tud.et.ifa.agtele.ui.contributions.EcoreEditorMenuContribution"
             locationURI="popup:org.eclipse.emf.ecore.presentation.EcoreEditorID">
-         <command
-               commandId="de.tud.et.ifa.agtele.ui.commands.OpenGenModel"
-               icon="icons/GenModelModelFile.gif"
-               label="Open GenModel"
-               style="push"
-               tooltip="Jumps to the corresponding element in the GenModel associated with this Ecore model">
-            <visibleWhen
-                  checkEnabled="true">
-            </visibleWhen>
-         </command>
       </menuContribution>
       <menuContribution
             allPopups="false"
-            locationURI="popup:org.eclipse.emf.codegen.ecore.genmodel.presentation.GenModelEditorID">
-         <menu
-               icon="icons/JavaClassFile.gif"
-               id="openCodeFromGenModelEditorMenu"
-               label="Open Code">
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenInterfaceModelCode"
-                  label="Open Model Code (Interface)"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenImplModelCode"
-                  label="Open Model Code (Impl)"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenEditCode"
-                  label="Open Edit Code"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenEditorCode"
-                  label="Open Editor Code"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenFactoryCode"
-                  label="Open Factory Code"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-         </menu>
-      </menuContribution>
-      <menuContribution
-            allPopups="false"
-            locationURI="popup:de.tud.et.ifa.agtele.ui.editors.EcoreEditorID">
-         <menu
-               icon="icons/JavaClassFile.gif"
-               id="openCodeFromAGTeleEcoreEditorMenu"
-               label="Open Code">
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenInterfaceModelCode"
-                  label="Open Model Code (Interface)"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenImplModelCode"
-                  label="Open Model Code (Impl)"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenEditCode"
-                  label="Open Edit Code"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenEditorCode"
-                  label="Open Editor Code"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenFactoryCode"
-                  label="Open Factory Code"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-         </menu>
-      </menuContribution>
-      <menuContribution
-            allPopups="false"
-            locationURI="popup:org.eclipse.emf.ecore.presentation.EcoreEditorID">
-         <menu
-               icon="icons/JavaClassFile.gif"
-               id="openCodeFromEcoreEditorMenu"
-               label="Open Code">
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenInterfaceModelCode"
-                  label="Open Model Code (Interface)"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenImplModelCode"
-                  label="Open Model Code (Impl)"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenEditCode"
-                  label="Open Edit Code"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenEditorCode"
-                  label="Open Editor Code"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-            <command
-                  commandId="de.tud.et.ifa.agtele.ui.commands.OpenFactoryCode"
-                  label="Open Factory Code"
-                  style="push"
-                  tooltip="Jumps to the model code generated for the selected element">
-               <visibleWhen
-                     checkEnabled="true">
-               </visibleWhen>
-            </command>
-         </menu>
+            class="de.tud.et.ifa.agtele.ui.contributions.OpenCodeMenuContribution"
+            locationURI="popup:org.eclipse.emf.codegen.ecore.genmodel.presentation.GenModelEditorID?after=open-actions">
       </menuContribution>
    </extension>
    <extension
