Make the AGTele ecore/xmi editors default editor for *.ecore/*.xmi files

--- a/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
@@ -17,11 +17,13 @@
    </extension>   
       <extension point="org.eclipse.ui.editors">
       <editor
-            id="de.tud.et.ifa.agtele.ui.editors.EcoreEditorID"
-            name="AGTele Ecore Model Editor"
-            icon="icons/EcoreModelFile.gif"
             class="de.tud.et.ifa.agtele.ui.editors.AgteleEcoreEditor"
-            contributorClass="org.eclipse.emf.ecore.presentation.EcoreActionBarContributor">
+            contributorClass="org.eclipse.emf.ecore.presentation.EcoreActionBarContributor"
+            default="true"
+            extensions="ecore"
+            icon="icons/EcoreModelFile.gif"
+            id="de.tud.et.ifa.agtele.ui.editors.EcoreEditorID"
+            name="AGTele Ecore Model Editor">
          <contentTypeBinding contentTypeId="org.eclipse.emf.ecore"/>
          <contentTypeBinding contentTypeId="org.eclipse.emf.emof"/>
       </editor>
@@ -29,11 +31,13 @@
    
    <extension point="org.eclipse.ui.editors">
       <editor
-            id="de.tud.et.ifa.agtele.ui.editors.ReflectiveEcoreEditorID"
-            name="AGTele Reflective Ecore Model Editor"
-            icon="platform:/plugin/org.eclipse.emf.edit/icons/full/obj16/ModelFile.gif"
             class="de.tud.et.ifa.agtele.ui.editors.AgteleEcoreEditor"
-            contributorClass="org.eclipse.emf.ecore.presentation.EcoreActionBarContributor$Reflective">
+            contributorClass="org.eclipse.emf.ecore.presentation.EcoreActionBarContributor$Reflective"
+            default="true"
+            extensions="xmi"
+            icon="platform:/plugin/org.eclipse.emf.edit/icons/full/obj16/ModelFile.gif"
+            id="de.tud.et.ifa.agtele.ui.editors.ReflectiveEcoreEditorID"
+            name="AGTele Reflective Ecore Model Editor">
          <contentTypeBinding contentTypeId="org.eclipse.emf.ecore.xmi"/>
       </editor>
    </extension>
