Add a menu contribution to the 'Agtele Settings' menu
This allows to set the operating mode of the listener.

--- a/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
@@ -74,6 +74,40 @@
                   label="Show inherited Class Features"
                   style="toggle">
             </command>
+            <menu
+               id="de.tud.et.ifa.agtele.eclipse.commons.ui.changeGeneratedCodeChangedListenerBehaviorMenu"
+               label="Add &apos;NOT&apos; to changed &apos;@generated&apos; methods">
+            <command
+                  commandId="de.tud.et.ifa.agtele.eclipse.commons.ui.changeGeneratedCodeChangedListenerBehaviorCommand"
+                  label="User"
+                  style="radio"
+                  tooltip="Via a dialog, lets the user decide whether a &apos;NOT&apos; should be added to changed methods that are tagged with &apos;@generated&apos;.">
+                   <parameter
+                     name="org.eclipse.ui.commands.radioStateParameter"
+                     value="0">
+               </parameter>
+            </command>
+            <command
+                  commandId="de.tud.et.ifa.agtele.eclipse.commons.ui.changeGeneratedCodeChangedListenerBehaviorCommand"
+                  label="Automatic"
+                  style="radio"
+                  tooltip="Automatically adds a &apos;NOT&apos; to changed methods that are tagged with &apos;@generated&apos;.">
+                   <parameter
+                     name="org.eclipse.ui.commands.radioStateParameter"
+                     value="1">
+               </parameter>
+            </command>
+            <command
+                  commandId="de.tud.et.ifa.agtele.eclipse.commons.ui.changeGeneratedCodeChangedListenerBehaviorCommand"
+                  label="Off"
+                  style="radio"
+                  tooltip="Turns off the listener.">
+               <parameter
+                     name="org.eclipse.ui.commands.radioStateParameter"
+                     value="2">
+               </parameter>
+            </command>
+         </menu>
          </menu>
       </menuContribution>
       <menuContribution
@@ -84,6 +118,8 @@
                label="Show inherited Class Features"
                style="toggle">
          </command>
+         
+         
       </menuContribution>
    </extension>
    <extension
@@ -142,6 +178,20 @@
             defaultHandler="de.tud.et.ifa.agtele.ui.handlers.AddDocumentationAnnotationHandler"
             id="de.tud.et.ifa.agtele.ui.commands.AddDocumentationAnnotation"
             name="AddDocumentationAnnotation">
+      </command>
+      <command
+            defaultHandler="de.tud.et.ifa.agtele.ui.handlers.ChangeGeneratedCodeChangedListenerBehaviorHandler"
+            id="de.tud.et.ifa.agtele.eclipse.commons.ui.changeGeneratedCodeChangedListenerBehaviorCommand"
+            name="ChangeGeneratedCodeChangedListenerBehaviorCommand">
+         <commandParameter
+               id="org.eclipse.ui.commands.radioStateParameter"
+               name="State"
+               optional="false">
+         </commandParameter>
+         <state
+               class="org.eclipse.ui.handlers.RadioState:0"
+               id="org.eclipse.ui.commands.radioState">
+         </state>
       </command>
    </extension>
 </plugin>
