--- a/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
@@ -194,4 +194,10 @@
          </state>
       </command>
    </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="de.tud.et.ifa.agtele.ui.StartupClass">
+      </startup>
+   </extension>
 </plugin>
