--- a/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
@@ -75,13 +75,14 @@
                   style="toggle">
             </command>
             <menu
-               id="de.tud.et.ifa.agtele.eclipse.commons.ui.changeGeneratedCodeChangedListenerBehaviorMenu"
-               label="Add &apos;NOT&apos; to changed &apos;@generated&apos; methods">
+                  id="de.tud.et.ifa.agtele.eclipse.commons.ui.changeGeneratedCodeChangedListenerBehaviorMenu"
+                  label="React to changed &apos;@generated&apos; methods"
+                  tooltip="Customize the behavior of the listener that reacts to manual changes to &apos;@generated&apos; methods.">
             <command
                   commandId="de.tud.et.ifa.agtele.eclipse.commons.ui.changeGeneratedCodeChangedListenerBehaviorCommand"
                   label="User"
                   style="radio"
-                  tooltip="Via a dialog, lets the user decide whether a &apos;NOT&apos; should be added to changed methods that are tagged with &apos;@generated&apos;.">
+                  tooltip="On a per-change basis, let the user decide (via a dialog) whether to react to.">
                    <parameter
                      name="org.eclipse.ui.commands.radioStateParameter"
                      value="0">
@@ -91,7 +92,7 @@
                   commandId="de.tud.et.ifa.agtele.eclipse.commons.ui.changeGeneratedCodeChangedListenerBehaviorCommand"
                   label="Automatic"
                   style="radio"
-                  tooltip="Automatically adds a &apos;NOT&apos; to changed methods that are tagged with &apos;@generated&apos;.">
+                  tooltip="Automatically react to changes (push to Ecore or - if not possible - add a &apos;NOT&apos; to the &apos;@generated&apos; tag.)">
                    <parameter
                      name="org.eclipse.ui.commands.radioStateParameter"
                      value="1">
@@ -101,7 +102,7 @@
                   commandId="de.tud.et.ifa.agtele.eclipse.commons.ui.changeGeneratedCodeChangedListenerBehaviorCommand"
                   label="Off"
                   style="radio"
-                  tooltip="Turns off the listener.">
+                  tooltip="Turn off the listener.">
                <parameter
                      name="org.eclipse.ui.commands.radioStateParameter"
                      value="2">
