Create separate buttons for 'Push to Ecore' and 'Add NOT Tag'
'Push to Ecore' represents the 'old' behavior (push to ecore -> if this
does not work, add NOT tag) where as 'Add NOT Tag' does not try to push
to ecore first.

Moreover, add another button to the selection dialog that triggers the
creation of a 'TODO' as part of the JavaDoc reminding the user to
incorporate the manual changes back into the Ecore metamodel.

Also change the behavior of the 'automatic' mode: This now adds a NOT
tag (without pushing to ecore) and also creates a TODO.

--- a/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
+++ b/de.tud.et.ifa.agtele.eclipse.commons.ui/plugin.xml
@@ -90,9 +90,9 @@
             </command>
             <command
                   commandId="de.tud.et.ifa.agtele.eclipse.commons.ui.changeGeneratedCodeChangedListenerBehaviorCommand"
-                  label="Automatic"
+                  label="Automatic (Add NOT tag)"
                   style="radio"
-                  tooltip="Automatically react to changes (push to Ecore or - if not possible - add a &apos;NOT&apos; to the &apos;@generated&apos; tag.)">
+                  tooltip="Automatically react to changes by adding a &apos;NOT&apos; to the &apos;@generated&apos; tag as well as a TODO for the user.">
                    <parameter
                      name="org.eclipse.ui.commands.radioStateParameter"
                      value="1">
